--- a/XAI3.ipynb
+++ b/XAI3.ipynb
@@ -26,26 +26,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 2,
       "metadata": {
         "id": "is5vcYrMpddG",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c3ca48dc-a063-47aa-f4e2-d0644fead491"
+        "outputId": "f1dfbb50-2040-4cdd-c393-a8ecf4d8a700"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "rm: cannot remove './sample_data': No such file or directory\n",
             "Cloning into 'XAI'...\n",
-            "remote: Enumerating objects: 9, done.\u001b[K\n",
-            "remote: Counting objects: 100% (9/9), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (7/7), done.\u001b[K\n",
-            "remote: Total 9 (delta 0), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (9/9), 166.48 KiB | 2.03 MiB/s, done.\n"
+            "remote: Enumerating objects: 12, done.\u001b[K\n",
+            "remote: Counting objects: 100% (12/12), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (10/10), done.\u001b[K\n",
+            "remote: Total 12 (delta 1), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (12/12), 1.62 MiB | 4.16 MiB/s, done.\n",
+            "Resolving deltas: 100% (1/1), done.\n"
           ]
         }
       ],
@@ -81,8 +81,31 @@
       "metadata": {
         "id": "bzh-9AIN75h8"
       },
-      "execution_count": 16,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%ls"
+      ],
+      "metadata": {
+        "id": "ksEyjVKtSyTJ",
+        "outputId": "5775ee34-a59f-42cd-cad5-23b8d736da8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[0m\u001b[01;34mXAI\u001b[0m/\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -109,14 +132,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "C2YWMUAk2k1k",
         "outputId": "09e0a593-24ad-4579-df41-7945a72aa687"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +210,7 @@
         "collapsed": true,
         "id": "xyKWyLfqxyLR"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +229,7 @@
         "id": "qX37bdX38wZx",
         "outputId": "6695230f-3a60-4328-c3c2-585ed4394b39"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -306,7 +328,7 @@
         "id": "z__9V8sEPbYF",
         "outputId": "b863d3cf-9573-4019-b6c3-b2392011ab5a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -409,7 +431,7 @@
         "'''\n",
         "    Splits the data into training and test sets\n",
         " and encode '''\n",
-        "X = df.drop(\"Churn\", axis=1)   # keep as DataFrame\n",
+        "X = df.drop([\"Churn\", \"customerID\"], axis=1)    # keep as DataFrame\n",
         "# Convert Yes → 1, No → 0\n",
         "y = df[\"Churn\"].map({\"Yes\": 1, \"No\": 0})\n",
         "#y_scaled = y.astype(int)  # converts True→1, False→0\n",
@@ -431,78 +453,27 @@
         "\n",
         "print(X_scaled[:5])   # first 5 rows\n",
         "print(y[:5])\n",
-        "      #X,y = load_data('https://github.com/SharmilNK/XAI/blob/main/WA_Fn-UseC_-Telco-Customer-Churn.csv')"
+        ""
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 211
         },
-        "collapsed": true,
         "id": "CjEdtkdYV8qx",
-        "outputId": "c32c3949-b466-4c6c-a94a-8ab0e3c9e9e7"
+        "outputId": "49356d3c-1e91-4c67-8e61-49c91a3d8045"
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "   SeniorCitizen    tenure  MonthlyCharges  customerID_0003-MKNFE  \\\n",
-            "0      -0.439916 -1.277445       -1.160323                      0   \n",
-            "1      -0.439916  0.066327       -0.259629                      0   \n",
-            "2      -0.439916 -1.236724       -0.362660                      0   \n",
-            "3      -0.439916  0.514251       -0.746535                      0   \n",
-            "4      -0.439916 -1.236724        0.197365                      0   \n",
-            "\n",
-            "   customerID_0004-TLHLJ  customerID_0011-IGKFF  customerID_0013-EXCHZ  \\\n",
-            "0                      0                      0                      0   \n",
-            "1                      0                      0                      0   \n",
-            "2                      0                      0                      0   \n",
-            "3                      0                      0                      0   \n",
-            "4                      0                      0                      0   \n",
-            "\n",
-            "   customerID_0013-MHZWF  customerID_0013-SMEOE  customerID_0014-BMAQU  ...  \\\n",
-            "0                      0                      0                      0  ...   \n",
-            "1                      0                      0                      0  ...   \n",
-            "2                      0                      0                      0  ...   \n",
-            "3                      0                      0                      0  ...   \n",
-            "4                      0                      0                      0  ...   \n",
-            "\n",
-            "   TotalCharges_995.35  TotalCharges_996.45  TotalCharges_996.85  \\\n",
-            "0                    0                    0                    0   \n",
-            "1                    0                    0                    0   \n",
-            "2                    0                    0                    0   \n",
-            "3                    0                    0                    0   \n",
-            "4                    0                    0                    0   \n",
-            "\n",
-            "   TotalCharges_996.95  TotalCharges_997.65  TotalCharges_997.75  \\\n",
-            "0                    0                    0                    0   \n",
-            "1                    0                    0                    0   \n",
-            "2                    0                    0                    0   \n",
-            "3                    0                    0                    0   \n",
-            "4                    0                    0                    0   \n",
-            "\n",
-            "   TotalCharges_998.1  TotalCharges_999.45  TotalCharges_999.8  \\\n",
-            "0                   0                    0                   0   \n",
-            "1                   0                    0                   0   \n",
-            "2                   0                    0                   0   \n",
-            "3                   0                    0                   0   \n",
-            "4                   0                    0                   0   \n",
-            "\n",
-            "   TotalCharges_999.9  \n",
-            "0                   0  \n",
-            "1                   0  \n",
-            "2                   0  \n",
-            "3                   0  \n",
-            "4                   0  \n",
-            "\n",
-            "[5 rows x 13601 columns]\n",
-            "0    0\n",
-            "1    0\n",
-            "2    1\n",
-            "3    0\n",
-            "4    1\n",
-            "Name: Churn, dtype: int64\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'df' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3225485181.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mSplits\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mdata\u001b[0m \u001b[0minto\u001b[0m \u001b[0mtraining\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mtest\u001b[0m \u001b[0msets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m  and encode '''\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Churn\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"customerID\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m    \u001b[0;31m# keep as DataFrame\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;31m# Convert Yes → 1, No → 0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Churn\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m\"Yes\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"No\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
           ]
         }
       ]
@@ -521,7 +492,7 @@
         "id": "kDNLdwIIWN0z",
         "outputId": "fbcf64fb-4465-4602-e996-1bdb979b10de"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -691,7 +662,7 @@
       "metadata": {
         "id": "Euxg_T-q1JSt"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -738,7 +709,7 @@
         "id": "tcOsllO405LJ",
         "outputId": "6d8228c0-cf77-418c-977a-6a204ddd105c"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -867,7 +838,7 @@
         "id": "GmDE0RjgXG8r",
         "outputId": "2de01722-4822-4880-a7b9-9622f3f7238e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -963,7 +934,7 @@
         "id": "yEmsYOvw1q-E",
         "outputId": "29a34b18-9513-42d6-9a10-dc3efa3348c7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1076,7 +1047,7 @@
         "id": "vniKTbELXou8",
         "outputId": "22a5c083-8bda-4e82-898d-c87c62924130"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1189,7 +1160,7 @@
         "id": "r8O2ak4umG-7",
         "outputId": "23e57882-25b8-49b2-9c05-f55b6f9cea04"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1289,7 +1260,7 @@
         "id": "uUHBMNbtX6RX",
         "outputId": "3a59ff31-4184-4f7e-957d-83bdc43fc15a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
