Revised explanation for correlation

--- a/GlobalExplanations_SN.ipynb
+++ b/GlobalExplanations_SN.ipynb
@@ -1152,12 +1152,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "32ub0cfqU7wa",
-        "outputId": "530f783f-973b-4608-f904-8a1f4cf77ee6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 771
-        }
+        },
+        "id": "32ub0cfqU7wa",
+        "outputId": "530f783f-973b-4608-f904-8a1f4cf77ee6"
       },
       "execution_count": 3,
       "outputs": [
@@ -1195,13 +1195,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Age has a weak correlations with other features (0.04–0.08).\n",
+        "\n",
+        "The years of education has the highest correlation with Hours per week (0.15) and Capital Gain (0.12). Altough the correlation is still weak it suggests that a person with higher education will clock in more work hours and have a higher investment activity.\n",
+        "\n",
+        "Capital Gain vs Capital Loss (-0.03) has a negative correlation\n",
+        "\n",
         "None of the numeric features are strongly correlated (>0.5).\n",
         "\n",
         "This means numeric collinearity isn’t a big issue in this model.\n",
-        "\n",
-        "Permutation Importance rankings are trustworthy for numeric features — since correlations are low, their importances are not “split” between variables.\n",
-        "\n",
-        "For categorical features, though, correlations could distort importance"
+        "\n"
       ],
       "metadata": {
         "id": "-zfy_QxnVIuh"
