--- a/GlobalExplanations_SN.ipynb
+++ b/GlobalExplanations_SN.ipynb
@@ -949,42 +949,38 @@
         "\n",
         "The mean indicats the average drop in model performance (accuracy, F1, etc.) when that feature is shuffled.\n",
         "\n",
-        "The ± std dev indicates how stable that importance is across multiple shuffles. Here the std deviations for all featurs are tiny (≤0.002) i.e. the model’s reliance on each feature is very stable, there is no big randomness.\n",
+        "The std dev indicates how stable that importance is across multiple shuffles. Here the std deviations for all featurs are tiny (≤0.002) i.e. the model’s reliance on each feature is very stable, there is no big randomness.\n",
         "\n",
-        "Capital Gain (0.050 ± 0.001)\n",
+        "1. Capital Gain (0.050 ± 0.001)\n",
         "\n",
         "The mean indicates that it is a strong feature and shuffling it would reduce the model's performance by a lot. The std deviation is low which indicates that it's importance is consistance across multiple shuffles i.e. it is very stable.\n",
         "\n",
         "This could be because, high capital gains are strongly tied to high income (>$50k).\n",
         "\n",
         "\n",
-        "Relationship (0.036 ± 0.002)\n",
+        "2. Relationship (0.036 ± 0.002)\n",
         "\n",
         "It is the second most important feature based on the mean. The std deviation indicates slightly higher variability.\n",
         "\n",
         "Relationship status is a big income signal.\n",
         "\n",
         "\n",
-        "Education-Num (0.031 ± 0.002)\n",
+        "3. Education-Num (0.031 ± 0.002)\n",
         "\n",
         "This is an importnt feature too, logically formal years of education has a strong positive effect on income.\n",
         "\n",
         "\n",
-        "Occupation & Age (0.018 ± 0.002 each)\n",
-        "\n",
-        "Capital Loss (0.012 ± 0.001)\n",
+        "4. Occupation & Age (0.018 ± 0.002 each) & Capital Loss (0.012 ± 0.001)\n",
         "\n",
         "These featurs are moderately important. Occupatin, age, losses (in tax/investments) are moderate indicators of a higher income bracket.\n",
         "\n",
         "\n",
-        "Hours per week (0.009 ± 0.001)\n",
+        "5. Hours per week (0.009 ± 0.001) & Marital Status (0.007 ± 0.001)\n",
         "\n",
-        "Marital Status (0.007 ± 0.001)\n",
-        "\n",
-        "These features have a lower mean indicating low importance. The hours worked or martial status doesn’t separate between income holders of >$50k vs ≤$50k\n",
+        "These features have a lower mean indicating low importance. The hours worked or martial status doesn’t separate between income holders of >$50k or <$50k\n",
         "\n",
         "\n",
-        "Workclass (0.005 ± 0.001)\n",
+        "6. Workclass (0.005 ± 0.001)\n",
         "\n",
         "This is the weakest feature. The job sector (private, gov, self-emp) adds very little once occupation, education, and capital gains are known.\n",
         "\n",
@@ -1097,29 +1093,29 @@
         "\n",
         "Dots (outliers): Occasional extreme values.\n",
         "\n",
-        "Capital Gain (~0.05) is the most important feature with very little variability, showing that the model consistently relies on it.\n",
+        "1. Capital Gain (~0.05) is the most important feature with very little variability, showing that the model consistently relies on it.\n",
         "\n",
-        "Relationship (~0.036) is a strong feature with some variability across shuffles but remains one of the top predictors.\n",
+        "2. Relationship (~0.036) is a strong feature with some variability across shuffles but remains one of the top predictors.\n",
         "\n",
-        "Education-Num (~0.031) is also a strong and reliable predictor, though its importance varies slightly across runs.\n",
+        "3. Education-Num (~0.031) is also a strong and reliable predictor, though its importance varies slightly across runs.\n",
         "\n",
-        "Occupation (~0.018) has a moderate impact with some variability, making it useful but less dominant. The outlier indicates that in one particular shuffle, the model’s performance dropped much less (or more) than usual.\n",
+        "4. Occupation (~0.018) has a moderate impact with some variability, making it useful but less dominant. The outlier indicates that in one particular shuffle, the model’s performance dropped much less (or more) than usual.\n",
         "\n",
-        "Age (~0.018) contributes moderately, with importance that can shift relative to Occupation.\n",
+        "5. Age (~0.018) contributes moderately, with importance that can shift relative to Occupation.\n",
         "\n",
-        "Capital Loss (~0.012) provides a small but stable contribution that is consistent across shuffles.\n",
+        "6. Capital Loss (~0.012) provides a small but stable contribution that is consistent across shuffles.\n",
         "\n",
-        "Hours per week (~0.009) adds a weak but steady signal to the model’s predictions.\n",
+        "7. Hours per week (~0.009) adds a weak but steady signal to the model’s predictions.\n",
         "\n",
-        "Marital Status (~0.007) offers a minor but consistent effect, reinforcing some predictive value.\n",
+        "8. Marital Status (~0.007) offers a minor but consistent effect, reinforcing some predictive value.\n",
         "\n",
-        "Workclass (~0.005) is a weak and somewhat unstable feature that the model does not rely on heavily.\n",
+        "9. Workclass (~0.005) is a weak and somewhat unstable feature that the model does not rely on heavily.\n",
         "\n",
-        "Sex (<0.005) has almost no impact, indicating that the model does not use it in predictions.\n",
+        "10. Sex (<0.005) has almost no impact, indicating that the model does not use it in predictions.\n",
         "\n",
-        "Country (<0.005) is effectively ignored by the model, showing negligible importance.\n",
+        "11. Country (<0.005) is effectively ignored by the model, showing negligible importance.\n",
         "\n",
-        "Race (<0.005) contributes nothing meaningful, which is good from a fairness perspective since it avoids demographic bias.\n",
+        "12. Race (<0.005) contributes nothing meaningful, which is good from a fairness perspective since it avoids demographic bias.\n",
         "\n",
         "The boxplots confirm stability i.e. the model is consistently using the same top features."
       ]
