--- a/ExplanableDeepLearning_SN.ipynb
+++ b/ExplanableDeepLearning_SN.ipynb
@@ -390,7 +390,7 @@
         "Note: This may not be the most accurate model. We see that the tumor in MRI image1 is highlighted in red/yellow zone - which depicts the tumor. However, the model misses the tumor in images 2,3.\n",
         "Image 4,5 do not have tumor, yet the model highlights the upper portion of the brain in red/yellow.\n",
         "\n",
-        "Citation: The above interpretation in not AI generated. The code was generated using AI/ predefined models."
+        "Citation: The above interpretation in not AI generated. The code was generated using AI/ predefined models on Oct 4, 2025 11:27am"
       ]
     }
   ],
