--- a/assignments/Mechanistic_Interp.ipynb
+++ b/assignments/Mechanistic_Interp.ipynb
@@ -17,13 +17,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/AIPI-590-XAI/Duke-AI-XAI/blob/main/assignments/mechanistic_interp_starter.ipynb)\n",
+        "# Mechanistic Interpretability Assignment\n",
         "\n",
-        "Mechanistic Interpretability Assignment\n",
-        "\n"
+        "Sharmil N\n",
+        "\n",
+        "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SharmilNK/XAI/blob/main/assignments/Mechanistic_Interp.ipynb)\n"
       ],
       "metadata": {
         "id": "nw5uQnGcBeak"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A tiny CNN was trained to classify images of circles, triangles, squares, and rectangles. Analysis of filters and activations showed that specific neurons specialize in detecting distinct geometric features—like edges, corners, and curves—that the model relies on for accurate shape recognition."
+      ],
+      "metadata": {
+        "id": "J4ieD33JsrRx"
       }
     },
     {
@@ -618,6 +628,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Interpretation:\n",
+        "\n",
+        "The conv2 kernel visualizations show that different filters have distinct color patterns, indicating sensitivity to various edge directions and textures. Red and blue regions represent positive and negative weights, suggesting that some filters detect vertical or diagonal edges, while others emphasize corners or intensity contrasts in the shapes."
+      ],
+      "metadata": {
+        "id": "9XKNMwBxsBxq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Activation maps for a single example (conv2)\n",
         "Shows which filters light up (activate) for a given image (triangle).\n",
         "\n",
@@ -702,7 +723,7 @@
       "cell_type": "markdown",
       "source": [
         "Interpretation: This tells us which parts of the image matter most to each filter.\n",
-        "Example: Filter 2 might glow on triangle corners → means it’s detecting angles."
+        "The activation maps show that multiple filters in the second convolution layer respond strongly along the edges and corners of the triangle. Bright areas highlight that the model focuses mainly on the triangle’s boundaries, confirming that these filters detect angular shapes and edge patterns essential for identifying triangles."
       ],
       "metadata": {
         "id": "VVE4N-9hnjV_"
@@ -889,6 +910,41 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Interprtation:\n",
+        "\n",
+        "Filters 0 and 2 activate strongly for class 3 (circle), indicating they detect curved edges or round boundaries. Meanwhile, filters 1, 3, and 4 respond mainly to class 2 (triangle) images, suggesting they specialize in recognizing sharp corners and angular shapes.\n",
+        "\n",
+        "Filters 7, 8, 10, and 11 all activate strongly for class 3 (circle) images, suggesting they detect curved or round patterns characteristic of circles. In contrast, filter 9 responds to class 0 (square) images, indicating it captures straight edges or angular boundaries.\n"
+      ],
+      "metadata": {
+        "id": "gVMzB4UorOKR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "mx171zV0qhAv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ablation (turn filters off)\n",
+        "\n",
+        "For one chosen image, it turns off one filter at a time in the second conv layer, then measures how much the model’s confidence drops for the correct class.\n",
+        "\n",
+        "Input:One test image (and its true label).\n",
+        "\n",
+        "Output:A bar chart showing how much each filter affects the prediction."
+      ],
+      "metadata": {
+        "id": "NJXPC9T3oGDC"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Ablation sweep of conv2 filters (Fix A: only get logits)\n",
@@ -927,12 +983,12 @@
         "        print(f\"Filter {i} changed prob by {c:+.3f}\")\n"
       ],
       "metadata": {
-        "id": "UI85ji3Af-1e",
-        "outputId": "6d08f8ab-8c0e-4556-c8ba-316715f7519a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 420
-        }
+        },
+        "id": "UI85ji3Af-1e",
+        "outputId": "6d08f8ab-8c0e-4556-c8ba-316715f7519a"
       },
       "execution_count": 13,
       "outputs": [
@@ -960,9 +1016,37 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Interpretation:\n",
+        "\n",
+        "This tells us which filters are most important. The ablation test for this single example shows that removing filter 4 causes the largest drop in prediction confidence, meaning this filter is crucial for identifying that shape. Other filters have minimal effect, suggesting they play a smaller or redundant role in the decision."
+      ],
+      "metadata": {
+        "id": "Ra-wyKxEoNxi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Average ablation across many images\n",
+        "\n",
+        "Perform ablation across many validation images.\n",
+        "Then average the effect for each filter.\n",
+        "\n",
+        "Input: All validation images.\n",
+        "\n",
+        "Output: A bar chart showing average importance of each filter.\n",
+        "\n",
+        "Why: Instead of just one image, this gives a general picture of which filters matter most overall for the model’s understanding."
+      ],
+      "metadata": {
+        "id": "IAi5Qq2coZxw"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Colab Cell 11: Ablation sweep across validation set (average absolute change)\n",
         "# For each filter, zero it across many validation images and compute the average absolute change in predicted probability for the true class.\n",
         "model.eval()\n",
         "filter_count = model.conv2.out_channels\n",
@@ -1042,6 +1126,33 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Interpretation:\n",
+        "\n",
+        "The ablation results show that filter 4 has the highest impact on the model’s predictions, indicating it captures the most important visual feature for shape recognition. Filters with smaller changes contribute less, suggesting they encode less critical or redundant features."
+      ],
+      "metadata": {
+        "id": "vqdHxZ-WpC3X"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Occlusion test\n",
+        "\n",
+        "Block small parts (patches) of an image and sees how the model’s confidence changes.\n",
+        "If blocking the middle of a circle makes the model less sure, then the middle is important.\n",
+        "\n",
+        "Input: One image, patch size, and stride (how far we move the patch each time).\n",
+        "Output:\n",
+        "A heatmap showing which parts of the image matter most (bright areas = more important).\n"
+      ],
+      "metadata": {
+        "id": "x7z_zFk1pPko"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Colab Cell 12: Simple occlusion map for a chosen example (sliding patch)\n",
@@ -1092,6 +1203,18 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Interpretation:\n",
+        "\n",
+        "For triangle (class 2), base prob 1.00 means the model was 100% sure before any occlusion.\n",
+        "The occlusion map shows that the model’s prediction confidence drops mainly when the central region of the image is hidden, indicating that it focuses on the core area of the shape for classification. Darker regions have little effect, meaning the background contributes minimally to the decision."
+      ],
+      "metadata": {
+        "id": "P-Wfyc2Np5yx"
+      }
     }
   ]
 }
