--- a/assignments/Mechanistic_Interp.ipynb
+++ b/assignments/Mechanistic_Interp.ipynb
@@ -630,7 +630,9 @@
       "source": [
         "Interpretation:\n",
         "\n",
-        "The conv2 kernel visualizations show that different filters have distinct color patterns, indicating sensitivity to various edge directions and textures. Red and blue regions represent positive and negative weights, suggesting that some filters detect vertical or diagonal edges, while others emphasize corners or intensity contrasts in the shapes."
+        "The conv2 kernel visualizations show that different filters have distinct color patterns, indicating sensitivity to various edge directions and textures. Red and blue regions represent positive and negative weights, suggesting that some filters detect vertical or diagonal edges, while others emphasize corners or intensity contrasts in the shapes.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "9XKNMwBxsBxq"
@@ -640,6 +642,7 @@
       "cell_type": "markdown",
       "source": [
         "Activation maps for a single example (conv2)\n",
+        "\n",
         "Shows which filters light up (activate) for a given image (triangle).\n",
         "\n",
         "Input:One image from the validation set.\n",
@@ -1214,6 +1217,29 @@
       ],
       "metadata": {
         "id": "P-Wfyc2Np5yx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Summary:\n",
+        "\n",
+        "We see here that, one of the most influential components in this model is filter 4 in the second convolution layer. Ablation results showed that removing this filter caused the largest drop in prediction confidence, revealing its key role in identifying angular boundaries of shapes.\n",
+        "Visualizations confirmed that this filter activates strongly on triangle edges and corners, suggesting it functions as a triangle-edge detector. The activation maps, top-activating images, and kernel patterns together show that the model builds up shape understanding by combining simple edge detectors (like filter 4) into higher-level geometric recognition."
+      ],
+      "metadata": {
+        "id": "p36lDfbxuRVI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We see how the different filters in a CNN behave like specialized “mini-experts,” each focusing on specific visual cues such as curves or corners. It was surprising to see how clearly some filters corresponded to real geometric features. The hardest part was interpreting overlapping activations as some filters seemed to respond to multiple shapes.\n",
+        "\n",
+        "To explore deeper, we should look at interpretability methods, like feature inversion or activation maximization, to better visualize exactly what each neuron sees."
+      ],
+      "metadata": {
+        "id": "tkKjJy37uVqw"
       }
     }
   ]
