--- a/assignments/Mechanistic_Interp.ipynb
+++ b/assignments/Mechanistic_Interp.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/SharmilNK/XAI/blob/main/assignments/Mechanistic_Interp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -54,7 +65,7 @@
       "metadata": {
         "id": "ho3hsFc0CLYv"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +146,7 @@
         "id": "9sEuJWAhlL93",
         "outputId": "0285a4a9-4341-46cd-caa3-e0e23d58211e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -208,7 +219,7 @@
         "id": "9oZFADV_lRB4",
         "outputId": "c806ba18-bf41-432e-a12a-282efdefdf12"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,7 +280,7 @@
         "id": "ElIYEIM2lR40",
         "outputId": "f82e3330-4b7e-46b5-a429-7476915f08ec"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,7 +363,7 @@
         "id": "s34xiZ0ElSMg",
         "outputId": "0d198431-85b8-45d6-8059-ee289d924cf8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,7 +574,7 @@
         "id": "ntyIXOuQmJpb",
         "outputId": "75b8efd6-906f-4130-df96-222c1d7bcf03"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -611,7 +622,7 @@
         "id": "KJiqTrTnlSY-",
         "outputId": "e0c53d85-91ea-4819-c0d4-3c8918e79889"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -698,7 +709,7 @@
         "id": "ZVNCsnq5lSl0",
         "outputId": "bb31a38b-77ba-40fe-fc7d-2a6bfa8b8b57"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -788,7 +799,7 @@
         "id": "U-HSompLnUu_",
         "outputId": "14626ea2-0db7-449a-dada-f2f5e8059f9b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -993,7 +1004,7 @@
         "id": "UI85ji3Af-1e",
         "outputId": "6d08f8ab-8c0e-4556-c8ba-316715f7519a"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1098,7 +1109,7 @@
         "id": "7gF5EqzgneTu",
         "outputId": "2d5409c6-d663-4b25-af3b-dd129269897c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1193,7 +1204,7 @@
         "id": "jqRca6n1nh3l",
         "outputId": "0c802177-1556-4c08-9355-b6265379d226"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1240,6 +1251,15 @@
       ],
       "metadata": {
         "id": "tkKjJy37uVqw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Citation: I did use Chat GPT to help with the code and to understand the concepts, process and interpretability of how neural networks classify images. 11/7/202702:13PM"
+      ],
+      "metadata": {
+        "id": "Gb8nO2X2u7aF"
       }
     }
   ]
